# AdventOfCode2022

./: CMakeLists.txt
_template/: CMakeLists.txt  data.h  solution.cpp
common/: aoc.h  range.h
day01/: CMakeLists.txt  data.h  day1.cpp  day1.h  main.cpp  solution.cpp  tests.cpp  tests.h
day02/: CMakeLists.txt  data.h  day2.cpp  day2.h  main.cpp  solution.cpp  tests.cpp  tests.h
day03/: data.h  solution.cpp
day04/: data.h  solution.cpp
day05/: data.h  solution.cpp
day06/: data.h  solution.cpp
day07/: data.h  solution.cpp
day08/: data.h  solution.cpp
day09/: data.h  solution.cpp
day10/: data.h  solution.cpp
day11/: CMakeLists.txt  bytecode.cpp  bytecode.h  data.h  solution.cpp
day12/: data.h  solution.cpp
day13/: data.h  solution.cpp
day14/: data.h  solution.cpp
day15/: data.h  solution.cpp
